--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                         <p class="hero__description">Entrez dans mon univers, où l'imagination se mêle à la réalité pour créer des expériences uniques et captivantes.
                          
                     </div>
-                    <img src="assets/img/IMG-20230109-WA0034__2_-removebg-preview.png" alt="Shawn" class="hero__img">
+                    <img src="assets/img/IMG_20231222_160727 (3).png" alt="Shawn" class="hero__img">
                 </div>
             </div>
         </section>
