Ajout de la phrase Je suis un professionnel expérimenté.

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 </div>
                 <div class="d-grid about__wrapper">
                     <div class="about__content">
-                        <h3 class="about__title">I'm a Professional and Experienced .</h3>
+                        <h3 class="about__title">Je suis un professionnel expérimenté.</h3>
                         <p class="about__description">Étudiant en génie informatique passionné par la technologie, l'art et la musique. Esprit entrepreneurial avec une solide expérience dans le développement de projets et de logiciels.
                         </p>
                         <a href="#project" class="btn btn--primary">savoir plus</a>
