ajout d'une autre photo de profil

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                         <p class="hero__description">Entrez dans mon univers, où l'imagination se mêle à la réalité pour créer des expériences uniques et captivantes.
                          
                     </div>
-                    <img src="assets/img/Samuel.png" alt="Sam" class="hero__img">
+                    <img src="assets/img/Samuel.jpg" alt="Sam" class="hero__img">
                 </div>
             </div>
         </section>
